okta/v6/docs/LogActor.md
# LogActor

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**AlternateId** | Pointer to **string** | Alternative ID of the actor | [optional] [readonly] 
**DetailEntry** | Pointer to **map[string]interface{}** | Further details about the actor | [optional] [readonly] 
**DisplayName** | Pointer to **string** | Display name of the actor | [optional] [readonly] 
**Id** | Pointer to **string** | ID of the actor | [optional] [readonly] 
**Type** | Pointer to **string** | Type of actor | [optional] [readonly] 

## Methods

### NewLogActor

`func NewLogActor() *LogActor`

NewLogActor instantiates a new LogActor object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewLogActorWithDefaults

`func NewLogActorWithDefaults() *LogActor`

NewLogActorWithDefaults instantiates a new LogActor object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetAlternateId

`func (o *LogActor) GetAlternateId() string`

GetAlternateId returns the AlternateId field if non-nil, zero value otherwise.

### GetAlternateIdOk

`func (o *LogActor) GetAlternateIdOk() (*string, bool)`

GetAlternateIdOk returns a tuple with the AlternateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAlternateId

`func (o *LogActor) SetAlternateId(v string)`

SetAlternateId sets AlternateId field to given value.

### HasAlternateId

`func (o *LogActor) HasAlternateId() bool`

HasAlternateId returns a boolean if a field has been set.

### GetDetailEntry

`func (o *LogActor) GetDetailEntry() map[string]interface{}`

GetDetailEntry returns the DetailEntry field if non-nil, zero value otherwise.

### GetDetailEntryOk

`func (o *LogActor) GetDetailEntryOk() (*map[string]interface{}, bool)`

GetDetailEntryOk returns a tuple with the DetailEntry field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDetailEntry

`func (o *LogActor) SetDetailEntry(v map[string]interface{})`

SetDetailEntry sets DetailEntry field to given value.

### HasDetailEntry

`func (o *LogActor) HasDetailEntry() bool`

HasDetailEntry returns a boolean if a field has been set.

### GetDisplayName

`func (o *LogActor) GetDisplayName() string`

GetDisplayName returns the DisplayName field if non-nil, zero value otherwise.

### GetDisplayNameOk

`func (o *LogActor) GetDisplayNameOk() (*string, bool)`

GetDisplayNameOk returns a tuple with the DisplayName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayName

`func (o *LogActor) SetDisplayName(v string)`

SetDisplayName sets DisplayName field to given value.

### HasDisplayName

`func (o *LogActor) HasDisplayName() bool`

HasDisplayName returns a boolean if a field has been set.

### GetId

`func (o *LogActor) GetId() string`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *LogActor) GetIdOk() (*string, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *LogActor) SetId(v string)`

SetId sets Id field to given value.

### HasId

`func (o *LogActor) HasId() bool`

HasId returns a boolean if a field has been set.

### GetType

`func (o *LogActor) GetType() string`

GetType returns the Type field if non-nil, zero value otherwise.

### GetTypeOk

`func (o *LogActor) GetTypeOk() (*string, bool)`

GetTypeOk returns a tuple with the Type field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetType

`func (o *LogActor) SetType(v string)`

SetType sets Type field to given value.

### HasType

`func (o *LogActor) HasType() bool`

HasType returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


